# gait

./: AGENTS.md  DOCUMENTATION.md  DOCUSAURUS_SETUP.md  README.md  pyproject.toml
.gait/: turns.jsonl
.gait/refs/heads/: main
.gait/refs/memory/: main
.github/workflows/: deploy-docs.yml
examples/: fake_chat.py
src/gait/: cli.py  objects.py  repo.py  schema.py
tests/: memory.py  test_branch_inherit_memory.py  test_context.py  test_merge.py  test_merge_memory.py  test_objects.py  test_repo_init.py  test_revert.py  test_revert_also_memory.py  test_turn_commit.py
website/: CLEANUP.md  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: intro.md
website/docs/architecture/: commit-dag.md  content-addressed-storage.md  data-schemas.md  llm-providers.md  memory-reflog.md  overview.md  remote-protocol.md
website/docs/cli-reference/: chat-commands.md  commands.md  environment-variables.md
website/docs/getting-started/: first-conversation.md  installation.md  key-concepts.md  quickstart.md
website/docs/recipes/: collaborative-reasoning.md  knowledge-merging.md  model-comparison.md  recovering-from-hallucinations.md  squashing-conversations.md
website/docs/troubleshooting/: common-issues.md  environment-setup.md
website/docs/user-guide/: advanced-workflows.md  branching-merging.md  interactive-chat.md  memory-system.md  provider-setup.md  remote-sync.md
website/src/components/HomepageFeatures/: index.tsx  styles.module.css
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
